# pennylane-lightning

./: CMakeLists.txt  Makefile  benchmark.cpp  setup.py
.github/workflows/: build.yml  tests.yml
cmake/: process_options.cmake
pennylane_lightning/: Makefile  lightning_qubit.py
pennylane_lightning/src/: .clang-tidy  Makefile  lightning_qubit.cpp  lightning_qubit.hpp  operations.hpp  operations_mvp.hpp  tensor.cpp  utils.cpp
pennylane_lightning/src/examples/: CMakeLists.txt  benchmark_gate_list.cpp  benchmark_operation.cpp
pennylane_lightning/src/gates/: AvailableKernels.hpp  Constant.hpp  GateImplementationsLM.hpp  GateImplementationsPI.hpp  GateImplementationsParallelLM.hpp  GateImplementationsParallelPI.hpp  KernelType.hpp
pennylane_lightning/src/gates/cpu_kernels/: GateImplementationsAVX2.hpp  GateImplementationsAVX512.hpp  (+4 more)
pennylane_lightning/src/simulator/: DefaultKernelsForStateVector.hpp  DispatchKeys.hpp  StateVectorManaged.hpp
pennylane_lightning/src/tests/: .clang-tidy  CMakeLists.txt  CreateAllWires.hpp  TestHelpers.hpp  TestKernels.hpp  Test_DynamicDispatcher.cpp  Test_GateImplementations_CompareKernels.cpp  Test_GateImplementations_Generator.cpp  Test_GateImplementations_Inverse.cpp  Test_GateImplementations_Nonparam.cpp  Test_GateImplementations_Param.cpp  Test_Internal.cpp  Test_Util.cpp  lightning_unittest.cpp
pennylane_lightning/src/util/: BitUtil.hpp  CMakeLists.txt  Macros.hpp  Memory.hpp  TypeList.hpp  Util.hpp
tests/: test_adjoint_jacobian.py  test_apply.py  test_comparison.py  test_expval.py  test_serialize.py
(+40 files in other folders)
